# template-repo

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  RELEASES.md  book.toml  flake.nix
.cargo/: _config.toml  config.toml
.github/ISSUE_TEMPLATE/: bug.md  code-quality.md  documentation.md  enhancement.md  performance.md  prototype.md  usability.md
.github/PULL_REQUEST_TEMPLATE/: rfc.md
.github/workflows/: ci.yml  release.yml
docs/src/: chapter_1.md  genre-analysis.md
docs/src/rfc/: template.md
examples/: hello_world.rs
src/: lib.rs  main.rs  utils.rs
template_game/: Cargo.toml
template_game/src/: main.rs
template_lib/: Cargo.toml
template_lib/src/: lib.rs
template_lib/src/graphics/: lighting.rs  mod.rs
template_lib/src/player/: camera.rs  cursor.rs  mod.rs
template_lib/src/simulation/: mod.rs
template_lib/tests/: test_setup.rs
template_macros/: Cargo.toml
tests/: integration.rs
tools/ci/: Cargo.toml
