[package]
name = "template"
description = "A Bevy + mdbook enabled template repo to build on."
version = "0.0.0"
authors = ["Leafwing Studios"]
homepage = "https://github.com/leafwing-studios/template-repo"
repository = "hhttps://github.com/leafwing-studios/template-repo"
license = "MIT + APACHE"
license-file = "LICENSE-APACHE"
edition = "2018"
categories = ["games", "game-development"]
keywords = ["bevy"]

[workspace]
members = ["./", "tools/ci"]

[exclude]
exclude = ["/assets", "/benches", "/tools", "/.github"]

[dependencies]
bevy = { version = "0.5", default-features = false}

[dev-dependencies]
criterion = "0.3"

[lib]
name = "template_lib"
path = "src/lib.rs"

[[bin]]
name = "template_bin"
path = "src/main.rs"

[[bench]]
name = "entity_spawning"
path = "benches/entity_spawning.rs"
harness = false