[package]
name = "template"
description = "A Bevy + mdbook enabled template repo to build on."
version = "0.0.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com"
repository = "https://github.com/leafwing-studios/template-repo"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.6", default-features = false, features = ["dynamic"]}

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.3"
# We can use a different feature set of Bevy for our library vs our examples and tests
bevy = { version = "0.6", default-features = false}


[lib]
name = "template_lib"
path = "src/lib.rs"

[[bin]]
name = "template_bin"
path = "src/main.rs"

[[bench]]
name = "entity_spawning"
path = "benches/entity_spawning.rs"
harness = false
