[workspace]
resolver = "2"

# ToDo: Change `template` to `your_game_name` here, below, and in the respective folders' `Cargo.toml`.
members = [
    "template_game", 
    "template_lib", 
    "template_macros", 
    "tools/ci"
]

default-members = ["template_game","template_lib"]

# Enable max dependency optimizations without impacting release compiles
[profile.dev.package."*"]
opt-level = 3