[package]
name = "template_game"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Leafwing Studios"]
edition = "2021"

[dependencies]
bevy = { version = "0.9", git = "https://github.com/bevyengine/bevy?rev=a1e4114", default-features = false}
template_lib ={ path = "../template_lib", version = "0.1"}

# [patch."https://github.com/bevyengine/bevy"]
# # We can override the bevy version with remote or local versions
# # This method causes less pain to downstream users trying to work off your revisions
# bevy = { version = "0.9", git = "https://github.com/bevyengine/bevy?rev=a1e4114" }


# [dev-dependencies]
# # We can use a different feature set of Bevy for our library vs our examples and tests
# bevy = { version = "0.9", git = "https://github.com/bevyengine/bevy?rev=a1e4114", default-features = false}