[package]
name = "template_game" # TODO: change to `your_game_name_game`
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Leafwing Studios"] # ToDo: Your dev team's info here
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev="fae61ad", default-features = false, features = ["dynamic_linking"]}
template_lib ={ path = "../template_lib", version = "0.1"}