[package]
name = "template_lib" # TODO: change to `your_game_name_lib`
version = "0.1.0"
authors = ["Leafwing Studios"]
license = "MIT OR Apache 2.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev="fae61ad", default-features = false, features = [
    "dynamic_linking",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_winit", 
    "png",  
    # "trace_tracy", # ToDo: check for tracing functionality soon  
    "x11",
] }
# bevy_kira_audio ={ git = "https://github.com/NiklasEi/bevy_kira_audio?branch=bevy_main", features = ["mp3"]}
rand = "0.8"
# template_macros = {version = "0.1", path = "../template_macros"}
petitset = "0.2"
serde = "1.0.152"
derive_more = "0.99.17"